# django-geocad

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  README.rst  boot_django.py  load_tests.py  noxfile.py  pyproject.toml  requirements-42.txt  requirements.in  requirements.txt  setup.cfg
manage/: boot_django.py  makemigrations.py  migrate.py  shell.py  test.py  urls.py
project/: settings.py
project/djeocad/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
project/djeocad/migrations/: 0001_initial.py
project/djeocad/static/djeocad/js/: map_script.js
project/djeocad/static/djeocad/tests/: yesgeo.dxf
project/djeocad/templates/djeocad/: base.html  drawing_detail.html  drawing_list.html  map_data.html
project/project/: asgi.py  settings.py  urls.py  wsgi.py
project/project/settings/: base.py  tests.py
project/project/templates/: base.html
project/tests/static/tests/: nogeo.dxf  yesgeo.dxf
project/tests/tests/: test_command.py  tests.py
src/django_geocad/: apps.py  models.py  urls.py  views.py
src/django_geocad/management/commands/: populate_block_field.py
src/django_geocad/migrations/: 0002_alter_drawing_options_drawing_designx_and_more.py  0003_layer.py  0004_entity.py  0005_entity_block.py  0006_entitydata.py  0007_entity_rotation_entity_xscale_entity_yscale.py  0008_alter_entity_data.py  0009_alter_entity_geom.py  0010_layer_unique_layer_name.py
src/django_geocad/static/django_geocad/js/: change_script.js
src/django_geocad/templates/django_geocad/: drawing_detail.html  drawing_list.html  entity_change.html  entity_create.html
src/django_geocad/templates/django_geocad/htmx/: drawing_detail.html  entity_data_list.html
src/djeocad/: admin.py  models.py  tests.py  urls.py  views.py
src/djeocad/management/commands/: populate_block_field.py
src/djeocad/migrations/: 0001_initial.py  0002_alter_drawing_options_drawing_designx_and_more.py  0003_layer.py  0004_entity.py  0005_entity_block.py  0006_entitydata.py  0007_entity_rotation_entity_xscale_entity_yscale.py  0008_alter_entity_data.py  0009_alter_entity_geom.py  0010_layer_unique_layer_name.py
src/djeocad/static/djeocad/js/: change_script.js  map_script.js
src/djeocad/static/djeocad/tests/: yesgeo.dxf
src/djeocad/templates/djeocad/: drawing_detail.html  drawing_list.html  entity_change.html  entity_create.html
src/djeocad/templates/djeocad/htmx/: drawing_detail.html  entity_data_list.html
src/djeocad/tests/: test_command.py  tests.py
tests/: urls.py
