[tool.black]
target-version = ['py312']

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-geocad"
version = "0.2.0"
authors = [
  { name="andywar65", email="andy.war1965@gmail.com" },
]
description = "Django app that imports CAD drawings in Leaflet.js maps"
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "Django==5.1.1",
    "django-colorfield==0.11.0",
    "django-geojson==4.1.0",
    "django-leaflet==0.30.1",
    "easy-thumbnails==2.10",
    "ezdxf==1.3.3",
    "nh3==0.2.18",
    "pyproj==3.6.1",
    "shapely==2.0.6",
]

[project.urls]
Repository = "https://github.com/andywar65/django-geocad"

[project.optional-dependencies]
dev = [
    "build==1.2.1",
    "nox==2024.4.15",
    "twine==5.1.1",
    "coverage",
]
